# aben

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  portalmap.txt
aben-portal/: CMakeLists.txt  README.md  platformio.ini
aben-portal/src/: main.cpp
aben-portal/src/controller/app/: App.cpp  App.h
aben-portal/src/controller/interaction/: RemoteMotionDetector.cpp  RemoteMotionDetector.h
aben-portal/src/controller/interaction/sensor/: HCSR04MotionSensor.cpp  HCSR04MotionSensor.h  MotionSensor.cpp  PIRMotionSensor.cpp
aben-portal/src/controller/network/: HeartBeat.cpp  HeartBeat.h  NetworkController.cpp  NetworkController.h
aben-portal/src/model/: AppSettings.cpp  AppSettings.h  Portal.cpp  Portal.h
aben-portal/src/util/: MathUtils.cpp  PinReader.cpp  PinReader.h  StatusLed.cpp  StatusLed.h  StopWatch.cpp
documentation/: Aben_Motherboard.fzz  Aben_Portal.fzz
examples/: AbenOscApp.touchosc
examples/AbenDebugMonitor/: AbenDebugMonitor.pde  Gamma.pde  Luboid.pde  Portal.pde
examples/AbenOSCDebug/: AbenOSCDebug.pde  Portal.pde
src/: main.cpp
src/controller/: TimeBasedController.cpp  TimeBasedController.h
src/controller/app/: AppSettings.cpp  AppSettings.h  Installation.cpp  Installation.h
src/controller/driver/LXESP32DMX/: LXHardwareSerial.cpp
src/controller/interaction/: PIRArrayInteraction.cpp  PIRArrayInteraction.h
src/controller/interaction/sensor/: MotionSensor.cpp  MotionSensor.h  PIRMotionSensor.cpp  PIRMotionSensor.h
src/controller/network/: NetworkController.cpp  NetworkController.h  OscController.h
src/controller/renderer/: DMXLightRenderer.cpp  DMXLightRenderer.h  LightRenderer.cpp  LightRenderer.h  SerialLightRenderer.cpp  SerialLightRenderer.h
src/controller/scene/: AbenSceneController.cpp  AbenSceneController.h  BaseScene.cpp  BaseScene.h  SceneController.cpp  SceneController.h  WaveScene.cpp  WaveScene.h
src/controller/scene/interaction/: PortalScene.cpp  PortalScene.h
src/controller/scene/show/: ShowScene.cpp  ShowScene.h
src/controller/scene/show/animation/: Animation.cpp  Animation.h  KeyPoint.cpp  KeyPoint.h  KeyPointSet.cpp  KeyPointSet.h  KeyPointType.h
src/controller/scene/star/: TimeStarScene.cpp  TimeStarScene.h
src/data/eeprom/: EEPROMStorage.cpp  EEPROMStorage.h  IEEPROMDataModel.cpp
src/data/model/: DataModel.cpp  DataModel.h
src/data/osc/: IOSCDataModel.h  IOSCPublisher.cpp  IOSCPublisher.h  OSCDataRouter.cpp  OSCDataRouter.h
src/data/osc/binding/: OSCAction.cpp  OSCAction.h  OSCDataBinding.cpp  OSCDataBinding.h  OSCRule.cpp  OSCRule.h
src/data/osc/rule/: OSCAction.cpp  OSCAction.h  OSCDataBinding.cpp  OSCDataBinding.h  OSCInputAction.cpp  OSCInputAction.h  OSCOutputAction.cpp  OSCOutputAction.h  OSCRule.cpp  OSCRule.h
src/data/osc/rule/converter/: IOSCBindingConverter.cpp  IOSCBindingConverter.h
src/model/: AppSettings.cpp  AppSettings.h  Installation.cpp  Installation.h  Portal.cpp  Portal.h
src/model/color/: ColorSpace.cpp  ColorSpace.h  HSVColor.cpp  HSVColor.h  RGBColor.cpp  RGBColor.h
src/model/converter/: MSBindingConverter.cpp  MSBindingConverter.h  ScaleBindingConverter.cpp  ScaleBindingConverter.h
src/model/light/: Led.cpp  Led.h  RGBLed.cpp  RGBLed.h
src/settings/eeprom/: EEPROMStorage.cpp  EEPROMStorage.h  IEEPROMDataModel.h
src/settings/model/: DataModel.h  IDataModel.cpp  IDataModel.h
src/settings/osc/: IOSCDataModel.cpp  IOSCDataModel.h  OSCDataRouter.cpp  OSCDataRouter.h
src/util/: MathUtils.cpp  MathUtils.h
